--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/cli": "^3.6.0",
+    "@chakra-ui/react": "^3.6.0",
+    "@emotion/react": "^11.14.0",
+    "add": "^2.0.6",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "5.0.1",
+    "snippet": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
