--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,16 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/cli": "^3.6.0",
-    "@chakra-ui/react": "^3.6.0",
+    "@chakra-ui/react": "^2.10.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "add": "^2.0.6",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    "framer-motion": "^12.0.11",
+    "framer-motion": "^12.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
-    "snippet": "^0.1.0"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
